--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
 
-  Order Summary
+    <title>Frontend Mentor | Order summary card</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <img
+          class="hero-img"
+          src="./images/illustration-hero.svg"
+          alt="hero image"
+        />
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+        <div class="summary">
+          <h1>Order Summary</h1>
 
-  Annual Plan
-  $59.99/year
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+        </div>
 
-  Change
+        <div class="price-card">
+          <div class="price-text">
+            <img src="./images/icon-music.svg" alt="music icon" />
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+            <div class="plan">
+              <span class="p1">Annual Plan</span>
+              <span class="p2">$59.99/year</span>
+            </div>
+          </div>
+
+          <a href="#">Change</a>
+        </div>
+
+        <div class="order-links">
+          <a href="#" class="payment">Proceed to Payment</a>
+          <a href="#" class="cancel-order">Cancel Order</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
